implemented minimize terminal window and added custom hook

--- a/libs/remix-ui/terminal/src/lib/remix-ui-terminal.css
+++ b/libs/remix-ui/terminal/src/lib/remix-ui-terminal.css
@@ -1,3 +1,7 @@
+
+element.style {
+ height: 323px !important;
+}
 .panel              {
     position          : relative;
     display           : flex;
