removed autoComplete highlight

--- a/libs/remix-ui/terminal/src/lib/remix-ui-terminal.css
+++ b/libs/remix-ui/terminal/src/lib/remix-ui-terminal.css
@@ -23,6 +23,7 @@ element.style {
   border: 1px solid #3f4455!important;
 }
 
+/* seleted option should reflect the theme color */
 .selectedOptions {
   background-color: #222336;
 }
