label word-break fixed

--- a/libs/remix-ui/tree-view/src/lib/remix-ui-tree-view.css
+++ b/libs/remix-ui/tree-view/src/lib/remix-ui-tree-view.css
@@ -23,7 +23,7 @@
     word-break: break-all;
   }
   .label_key {
-    min-width: 15%;
+    min-width: max-content;
     max-width: 80%;
     word-break: break-word;
   }
